--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -32,6 +32,7 @@
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
+        android:textColor="@color/black"
         android:textColorHint="#8D6E63"
         app:layout_constraintBottom_toTopOf="@+id/pass"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,6 +50,7 @@
         android:hint="@string/contrase_a"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:textColor="@color/black"
         android:textColorHint="#8D6E63"
         app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintEnd_toEndOf="parent"
