--- a/app/src/main/res/layout/spinner1.xml
+++ b/app/src/main/res/layout/spinner1.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/text1"
+    style="@style/Widget.AppCompat.TextView.SpinnerItem"
     android:layout_width="match_parent"
-    android:textColor="@color/black"
-    android:textSize="16dp"
+    android:layout_height="48dp"
     android:background="@color/gris"
-    android:layout_height="match_parent">
-</CheckedTextView>
+    android:ellipsize="end"
+    android:gravity="center_vertical"
+    android:lines="1"
+    android:textColor="@color/black" />
