--- a/app/src/main/res/layout/spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/spinner_dropdown_item.xml
@@ -6,5 +6,5 @@
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:ellipsize="marquee"
-    android:background="@color/gris"
-    android:textColor="@color/black"/>
+    android:textColor="@color/black"
+    android:background="@color/gris"/>
